k8s/overlays/local/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-dynamo-lab-app
  namespace: python-dynamo-lab
spec:
  replicas: 1    # 1 replica is enough for local — saves memory
  template:
    spec:
      containers:
        - name: python-dynamo-lab-app
