k8s/overlays/local/dynamodb-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamodb-local
  namespace: python-dynamo-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dynamo-lab-app
  template:
    metadata:
      labels:
        app: dynamo-lab-app
    spec:
      containers:
        - name: dynamodb-local
          image: amazon/dynamodb-local
          ports:
            - containerPort: 8000
          args: ["-jar", "DynamoDBLocal.jar", "-inMemory"]
