k8s/overlays/local/dynamodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dynamodb-svc
  namespace: python-dynamo-lab
spec:
  type: ClusterIP
  ports:
    - name: http
      targetPort: 8000
      port: 8001
  selector:
    app: dynamo-lab-app
